--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,23 @@
 .alineacion{
     margin-top:30px;
 }
+
+.toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
+  color: white; }
+.md-toolbar-tools{
+    background-color: rgb(52,152,219);
+}
+.color-circle{
+    color: rgb(52,152,219);
+
+        
+}
+.navBardemoBasicUsage md-content .ext-content {
+  padding: 50px;
+  margin: 20px;
+  background-color: #FFF2E0; }
+
+.caja{
+    box-shadow: 0px 0px 15px #636363;
+    margin-top: 15px;
+}
