--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.imagenes{
+    border-radius:;
+}
+
 .card-color{
     background-color: #252427;
     box-shadow: 2px 2px 5px #626262;
@@ -43,3 +47,36 @@
     box-shadow: 0px 0px 15px #636363;
     margin-top: 15px;
 }
+.descripcion{
+    background-color: rgba(98, 98, 98, 0.1);
+    border-radius: 5px;
+    border: #000;
+    color: #626262;
+}
+
+.fuente a{
+    font-size: 140px;
+}
+.fuente span{
+    font-size: 20px;
+}
+
+.checkboxdemoSelectAll .demo-legend {
+  color: #3F51B5; }
+
+.checkboxdemoSelectAll .demo-fieldset {
+  border-style: solid;
+  border-width: 1px;
+  height: 100%; }
+
+.checkboxdemoSelectAll .demo-select-all-checkboxes {
+  padding-left: 30px; }
+
+.datepickerdemoBasicUsage {
+  /** Demo styles for mdCalendar. */ }
+  .datepickerdemoBasicUsage md-content {
+    padding-bottom: 200px; }
+  .datepickerdemoBasicUsage .validation-messages {
+    font-size: 12px;
+    color: #dd2c00;
+    margin-left: 15px; }
