--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -10,7 +10,6 @@
 }
 .color-circle{
     color: rgb(52,152,219);
-
         
 }
 .navBardemoBasicUsage md-content .ext-content {
@@ -22,8 +21,9 @@
     margin-top: 15px;
 }
 .title-project{
+
     margin-left: 10px;
-    font-size: 25px;
+    font-size: 30px;
 }
 .title-team{
     font-size: 25px;
@@ -60,4 +60,26 @@ ul.rating {
 }
 #customer-box{
     margin-left: 50px;
+}
+.teamimg img{
+    height:50px; 
+    width:50px;
+    box-shadow: 0px 0px 6px #636363;
+    margin-left: 10px;
+}
+.technologys{
+    margin-top:-40px;
+    margin-left:90px;
+}
+.technologys img{
+    width: 30px;
+    margin-left: 2px;
+}
+.profile img{
+    width:80px; 
+    margin-top:20px;
+}
+iframe{
+    border-radius: 10px 10px 10px 10px;
+    border-color: transparent;
 }
