--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-.imagenes{
-    border-radius:;
-}
+
 
 .card-color{
     background-color: #252427;
@@ -79,4 +77,5 @@
   .datepickerdemoBasicUsage .validation-messages {
     font-size: 12px;
     color: #dd2c00;
-    margin-left: 15px; }
+    margin-left: 15px;
+  }
